--- a/index.html
+++ b/index.html
@@ -6,10 +6,194 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsive football</title>
+    <script src="https://kit.fontawesome.com/085812a260.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <header class="top-space">
+
+        <div class="top">
+            <div class="head-title">
+                <h2 class="big-writing">
+                    Conmebol <br> Copa America <br> 2021
+                </h2>
+                <p class="showing-live"><a href="" class="live-button"> Watch live <i
+                            class="fas fa-arrow-right arrow"></i></a>
+                </p>
+            </div>
+            <div class="player-image">
+                <img src="images/banner.png" alt="">
+            </div>
+
+        </div>
+    </header>
+    <main>
+        <section class="container">
+            <div class="players">
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-1.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
+                                numquam earum vel incidunt temporibus non?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-2.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Leonel Messi</h3>
+                            <p class="about-player">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime
+                                nemo recusandae, voluptates debitis facilis eaque.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-3.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Cristiano Ronaldo</h3>
+                            <p class="about-player">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita
+                                ab magnam ipsum ipsa temporibus architecto!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-4.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
+                                sapiente magnam corporis corrupti quod deserunt?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-5.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+                                illo placeat omnis, fuga hic culpa.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-6.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+                                modi perferendis aperiam odio, a porro.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-7.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
+                                exercitationem quia voluptatibus? Eius, aliquid adipisci?</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-8.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ad
+                                pariatur nostrum iusto. Assumenda, consectetur!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-9.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+                                eum suscipit nihil amet nobis sunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-10.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, in
+                                quos autem provident deserunt cumque.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-11.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Consequuntur eum asperiores optio aut illum vel.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-player-info">
+                    <div class="player">
+                        <div class="player-pic">
+                            <img src="images/players/player-12.png" alt="">
+                        </div>
+                        <div class="player-detail">
+                            <h3 class="player-name">Neymar Jr</h3>
+                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
+                                consectetur deserunt! Eos excepturi quibusdam omnis.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+    <footer class="finish ">
+        <div class="logo">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="icon">
+            <i class="fab fa-instagram-square one-icon"></i>
+            <i class="fab fa-dribbble-square  one-icon"></i>
+            <i class="fab fa-twitter  one-icon"></i>
+            <i class="fab fa-youtube  one-icon"></i>
+        </div>
+        <div class="copy-right">
+            <p class="copy">Copyright <i class="far fa-copyright"></i> 2022 Football</p>
+        </div>
+    </footer>
+
 
 </body>
 
