--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <div class="top">
             <div class="head-title">
-                <h2 class="big-writing">
+                <h3 class="big-writing">
                     Conmebol <br> Copa America <br> 2021
-                </h2>
+                </h3>
                 <p class="showing-live"><a href="" class="live-button"> Watch live <i
                             class="fas fa-arrow-right arrow"></i></a>
                 </p>
@@ -73,7 +73,7 @@
                             <img src="images/players/player-4.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Paulo Dybala</h3>
                             <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
                                 sapiente magnam corporis corrupti quod deserunt?</p>
                         </div>
@@ -85,7 +85,7 @@
                             <img src="images/players/player-5.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Mesut Ozil</h3>
                             <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
                                 illo placeat omnis, fuga hic culpa.</p>
                         </div>
@@ -97,7 +97,7 @@
                             <img src="images/players/player-6.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Mauro lcardi</h3>
                             <p class="about-player">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
                                 modi perferendis aperiam odio, a porro.</p>
                         </div>
@@ -109,7 +109,7 @@
                             <img src="images/players/player-7.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Di Maria</h3>
                             <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
                                 exercitationem quia voluptatibus? Eius, aliquid adipisci?</p>
                         </div>
@@ -121,7 +121,7 @@
                             <img src="images/players/player-8.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Kylian Mbappe</h3>
                             <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ad
                                 pariatur nostrum iusto. Assumenda, consectetur!</p>
                         </div>
@@ -133,7 +133,7 @@
                             <img src="images/players/player-9.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Mohamed Salah</h3>
                             <p class="about-player">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
                                 eum suscipit nihil amet nobis sunt.</p>
                         </div>
@@ -145,7 +145,7 @@
                             <img src="images/players/player-10.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Harry kane</h3>
                             <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, in
                                 quos autem provident deserunt cumque.</p>
                         </div>
@@ -157,7 +157,7 @@
                             <img src="images/players/player-11.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Kevin De Bruyne</h3>
                             <p class="about-player">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Consequuntur eum asperiores optio aut illum vel.</p>
                         </div>
@@ -169,7 +169,7 @@
                             <img src="images/players/player-12.png" alt="">
                         </div>
                         <div class="player-detail">
-                            <h3 class="player-name">Neymar Jr</h3>
+                            <h3 class="player-name">Philippe Coutinho</h3>
                             <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
                                 consectetur deserunt! Eos excepturi quibusdam omnis.</p>
                         </div>
@@ -177,6 +177,29 @@
                 </div>
             </div>
 
+        </section>
+        <section class="container">
+            <h1> Gallary</h1>
+            <div class="gallary-photos">
+                <div class="photo">
+                    <img src="images/gallary-1.png" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallary-2.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallary-4.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallary-7.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallary-5.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallary-6.jpg" alt="">
+                </div>
+            </div>
         </section>
     </main>
     <footer class="finish ">
