--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Neymar Jr</h3>
-                            <p class="about-player">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit
-                                numquam earum vel incidunt temporibus non?</p>
+                            <p class="about-player">Neymar is a Brazilian professional footballer who plays as a forward
+                                for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
                         </div>
                     </div>
                 </div>
@@ -52,8 +52,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Leonel Messi</h3>
-                            <p class="about-player">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime
-                                nemo recusandae, voluptates debitis facilis eaque.</p>
+                            <p class="about-player">Lionel Andrés Messi is an Argentine professional footballer who
+                                plays as a forward and captains the Argentina national team.</p>
                         </div>
                     </div>
                 </div>
@@ -64,8 +64,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Cristiano Ronaldo</h3>
-                            <p class="about-player">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita
-                                ab magnam ipsum ipsa temporibus architecto!</p>
+                            <p class="about-player">Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
+                                professional footballer</p>
                         </div>
                     </div>
                 </div>
@@ -76,8 +76,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Paulo Dybala</h3>
-                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
-                                sapiente magnam corporis corrupti quod deserunt?</p>
+                            <p class="about-player">Paulo Exequiel Dybala is an Argentine professional footballer who
+                                plays as a forward for Serie A club Juventus and the Argentina national team.</p>
                         </div>
                     </div>
                 </div>
@@ -88,8 +88,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Mesut Ozil</h3>
-                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-                                illo placeat omnis, fuga hic culpa.</p>
+                            <p class="about-player">Mesut Özil is a German professional footballer who plays as an
+                                attacking midfielder for Süper Lig club Fenerbahçe. </p>
                         </div>
                     </div>
                 </div>
@@ -100,8 +100,9 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Mauro lcardi</h3>
-                            <p class="about-player">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-                                modi perferendis aperiam odio, a porro.</p>
+                            <p class="about-player">Mauro Emanuel Icardi is an Argentine professional footballer who
+                                plays as a striker for Ligue 1 club Paris Saint-Germain.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -112,8 +113,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Di Maria</h3>
-                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-                                exercitationem quia voluptatibus? Eius, aliquid adipisci?</p>
+                            <p class="about-player">Ángel Fabián Di María is an Argentine professional footballer who
+                                plays for Ligue 1 club Paris Saint-Germain</p>
                         </div>
                     </div>
                 </div>
@@ -124,8 +125,7 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Kylian Mbappe</h3>
-                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ad
-                                pariatur nostrum iusto. Assumenda, consectetur!</p>
+                            <p class="about-player">Kylian Mbappé Lottin is a French professional footballer </p>
                         </div>
                     </div>
                 </div>
@@ -136,8 +136,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Mohamed Salah</h3>
-                            <p class="about-player">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
-                                eum suscipit nihil amet nobis sunt.</p>
+                            <p class="about-player">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
+                                footballer who plays as a forward for Premier League club Liverpool </p>
                         </div>
                     </div>
                 </div>
@@ -148,8 +148,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Harry kane</h3>
-                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, in
-                                quos autem provident deserunt cumque.</p>
+                            <p class="about-player">Harry Edward Kane MBE is an English professional footballer who
+                                plays as a striker for Premier League club </p>
                         </div>
                     </div>
                 </div>
@@ -160,8 +160,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Kevin De Bruyne</h3>
-                            <p class="about-player">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Consequuntur eum asperiores optio aut illum vel.</p>
+                            <p class="about-player">Kevin De Bruyne is a Belgian professional footballer who plays as a
+                                midfielder for Premier League club Manchester City,</p>
                         </div>
                     </div>
                 </div>
@@ -172,8 +172,8 @@
                         </div>
                         <div class="player-detail">
                             <h3 class="player-name">Philippe Coutinho</h3>
-                            <p class="about-player">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-                                consectetur deserunt! Eos excepturi quibusdam omnis.</p>
+                            <p class="about-player">Philippe Coutinho Correia is a Brazilian professional footballer who
+                                plays as an attacking midfielder or winger for Spanish club Barcelona </p>
                         </div>
                     </div>
                 </div>
@@ -193,13 +193,13 @@
                     <img src="images/gallary-4.jpg" alt="">
                 </div>
                 <div class="photo">
-                    <img src="images/gallary-7.jpg" alt="">
-                </div>
-                <div class="photo">
-                    <img src="images/gallary-5.jpg" alt="">
-                </div>
-                <div class="photo">
                     <img src="images/gallary-6.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/gallary3.jpg" alt="">
+                </div>
+                <div class="photo">
+                    <img src="images/match.png" alt="">
                 </div>
             </div>
         </section>
